Change admin password field to type="password" in installer
The installer previously used <input type="text"> for the administrator
password field. This causes the browser to treat the password as a regular
text input and store it in form-autofill history. As a result, the browser
may display the administrator password in autocomplete suggestions during
future visits, exposing sensitive credentials to anyone with local access
to the machine or browser profile.

Changing the input type to "password" prevents browsers from saving or
suggesting the password as plain text and aligns the installer with
industry-standard security practices. This reduces the risk of inadvertent
credential leakage and improves overall installation security.

--- a/upload/install/view/template/install/step_3.twig
+++ b/upload/install/view/template/install/step_3.twig
@@ -113,7 +113,7 @@
                   </div>
                   <div class="col-12 col-md-6 required">
                     <label for="input-password" class="form-label">{{ entry_password }}</label>
-                    <input type="text" name="password" value="" id="input-password" class="form-control"/>
+                    <input type="password" name="password" value="" id="input-password" class="form-control"/>
                     <div id="error-password" class="invalid-feedback"></div>
                   </div>
                 </div>
