--- a/upload/catalog/view/template/common/currency.twig
+++ b/upload/catalog/view/template/common/currency.twig
@@ -1,6 +1,13 @@
 {% if currencies|length > 1 %}
-  <form id="form-currency" action="{{ action }}" method="post" data-oc-toggle="ajax">
-    <div class="dropdown"><a href="#" data-bs-toggle="dropdown" class="dropdown-toggle">{% if symbol_left %}<strong>{{ symbol_left }}</strong>{% elseif symbol_right %}<strong>{{ symbol_right }}</strong>{% endif %} <span class="d-none d-md-inline">{{ text_currency }}</span> <i class="fa-solid fa-caret-down"></i></a>
+  <form id="form-currency">
+    <div class="dropdown">
+
+      <a href="#" data-bs-toggle="dropdown" class="dropdown-toggle">{% if symbol_left %}<strong>{{ symbol_left }}</strong>{% elseif symbol_right %}<strong>{{ symbol_right }}</strong>{% endif %}
+
+
+        <span class="d-none d-md-inline">{{ text_currency }}</span> <i class="fa-solid fa-caret-down"></i></a>
+
+
       <ul class="dropdown-menu">
         {% for currency in currencies %}
           {% if currency.symbol_left %}
@@ -11,7 +18,5 @@
         {% endfor %}
       </ul>
     </div>
-    <input type="hidden" name="code" value=""/>
-    <input type="hidden" name="redirect" value="{{ redirect }}"/>
   </form>
 {% endif %}
