--- a/upload/catalog/view/template/common/footer.twig
+++ b/upload/catalog/view/template/common/footer.twig
@@ -56,10 +56,10 @@ Please donate via PayPal to donate@opencart.com
 </footer>
 </div>
 {{ cookie }}
-<script src="./catalog/view/javascript/framework.js" type="module"></script>
-<script src="./assets/jquery/jquery-3.7.1.min.js" type="text/javascript"></script>
-<script src="./assets/bootstrap/js/bootstrap.bundle.min.js" type="text/javascript"></script>
+<script src="./assets/jquery/jquery-3.7.1.min.js" type="module"></script>
+<script src="./assets/bootstrap/js/bootstrap.bundle.min.js" type="module"></script>
+<script src="./catalog/view/javascript/common.js" type="module"></script>
 {% for script in scripts %}
-  <script src="{{ script.href }}" type="text/javascript"></script>
+  <script src="./{{ script.href }}" type="module"></script>
 {% endfor %}
 </body></html>
