--- a/upload/admin/view/template/catalog/information_form.twig
+++ b/upload/admin/view/template/catalog/information_form.twig
@@ -46,9 +46,7 @@
                       <div class="row mb-3">
                         <label for="input-description-{{ language.language_id }}" class="col-sm-2 col-form-label">{{ entry_description }}</label>
                         <div class="col-sm-10">
-                          <div id="input-description-{{ language.language_id }}">
-                            <textarea name="information_description[{{ language.language_id }}][description]" placeholder="{{ entry_description }}" data-oc-toggle="ckeditor" data-lang="{{ ckeditor }}" class="form-control" required>{{ information_description[language.language_id] ? information_description[language.language_id].description }}</textarea>
-                          </div>
+                          <textarea name="information_description[{{ language.language_id }}][description]" placeholder="{{ entry_description }}" id="input-description-{{ language.language_id }}" data-oc-toggle="ckeditor" data-lang="{{ ckeditor }}" class="form-control" required>{{ information_description[language.language_id] ? information_description[language.language_id].description }}</textarea>
                         </div>
                       </div>
                     </fieldset>
