--- a/upload/admin/view/template/common/developer.twig
+++ b/upload/admin/view/template/common/developer.twig
@@ -12,12 +12,12 @@
             <tr>
               <td>{{ text_html }}<br/>
                 <span class="fw-light">{{ help_html }}</span></td>
-              <td class="text-end"><button type="button" value="html" data-bs-toggle="tooltip" title="{{ button_clear }}" class="btn btn-warning"><i class="fa-solid fa-rotate"></i></button></td>
+              <td class="text-end"><button type="button" value="html" title="{{ button_clear }}" class="btn btn-warning"><i class="fa-solid fa-rotate"></i></button></td>
             </tr>
             <tr>
               <td>{{ text_cache }}<br/>
                 <span class="fw-light">{{ help_cache }}</span></td>
-              <td class="text-end"><button type="button" value="cache" data-bs-toggle="tooltip" title="{{ button_clear }}" class="btn btn-warning"><i class="fa-solid fa-rotate"></i></button></td>
+              <td class="text-end"><button type="button" value="cache" title="{{ button_clear }}" class="btn btn-warning"><i class="fa-solid fa-rotate"></i></button></td>
             </tr>
             <tr>
               <td>{{ text_theme }}<br/>
