--- a/upload/admin/view/template/design/seo_regex_list.twig
+++ b/upload/admin/view/template/design/seo_regex_list.twig
@@ -24,7 +24,7 @@
               <td>{{ seo_regex.keyword }}</td>
               <td>{{ seo_regex.value }}</td>
               <td>{{ seo_regex.sort_order }}</td>
-              <td class="text-end"><a href="{{ seo_regex.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="btn btn-primary"><i class="fa-solid fa-pencil"></i></a></td>
+              <td class="text-end"><a href="{{ seo_regex.edit }}" title="{{ button_edit }}" class="btn btn-primary"><i class="fa-solid fa-pencil"></i></a></td>
             </tr>
           {% endfor %}
         {% else %}
