--- a/upload/admin/view/template/common/dashboard.twig
+++ b/upload/admin/view/template/common/dashboard.twig
@@ -4,7 +4,7 @@
     <div class="container-fluid">
       {% if developer_status %}
         <div class="float-end">
-          <button type="button" id="button-setting" data-bs-toggle="tooltip" title="{{ button_developer }}" class="btn btn-info"><i class="fa-solid fa-cog"></i></button>
+          <button type="button" id="button-setting" title="{{ button_developer }}" class="btn btn-info"><i class="fa-solid fa-cog"></i></button>
         </div>
       {% endif %}
       <h1>{{ heading_title }}</h1>
