--- a/upload/admin/view/template/common/forgotten_reset.twig
+++ b/upload/admin/view/template/common/forgotten_reset.twig
@@ -20,7 +20,7 @@
               </div>
               <div class="text-end">
                 <button type="submit" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i> {{ button_save }}</button>
-                <a href="{{ back }}" data-bs-toggle="tooltip" title="{{ button_back }}" class="btn btn-light"><i class="fa-solid fa-reply"></i></a>
+                <a href="{{ back }}" title="{{ button_back }}" class="btn btn-light"><i class="fa-solid fa-reply"></i></a>
               </div>
             </form>
           </div>
