--- a/upload/admin/view/template/tool/menu_list.twig
+++ b/upload/admin/view/template/tool/menu_list.twig
@@ -24,7 +24,7 @@
                   {{ text_link }}
                 {% endif %}</td>
               <td class="text-end">{{ menu.sort_order }}</td>
-              <td class="text-end text-nowrap"><a href="{{ menu.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="btn btn-primary"><i class="fa-solid fa-pencil"></i></a></td>
+              <td class="text-end text-nowrap"><a href="{{ menu.edit }}" title="{{ button_edit }}" class="btn btn-primary"><i class="fa-solid fa-pencil"></i></a></td>
             </tr>
           {% endfor %}
         {% else %}
