--- a/upload/admin/view/template/common/footer.twig
+++ b/upload/admin/view/template/common/footer.twig
@@ -3,6 +3,7 @@
 </div>
 <script src="../assets/jquery/jquery-3.7.1.min.js" type="module"></script>
 <script src="../assets/bootstrap/js/bootstrap.bundle.min.js" type="module"></script>
+<script src="./view/javascript/opencart.js" type="module"></script>
 <script src="./view/javascript/common.js" type="module"></script>
 {% for script in scripts %}
   <script src="{{ script.href }}" type="module"></script>
