--- a/upload/admin/view/template/localisation/weight_class_list.twig
+++ b/upload/admin/view/template/localisation/weight_class_list.twig
@@ -4,9 +4,9 @@
       <thead>
         <tr>
           <th class="text-center" style="width: 1px;"><input type="checkbox" onclick="$('input[name*=\'selected\']').prop('checked', $(this).prop('checked'));" class="form-check-input"/></th>
-          <th><a href="{{ sort_title }}"{% if sort == 'title' %} class="{{ order|lower }}"{% endif %}>{{ column_title }}</a></th>
-          <th><a href="{{ sort_unit }}"{% if sort == 'unit' %} class="{{ order|lower }}"{% endif %}>{{ column_unit }}</a></th>
-          <th class="text-end"><a href="{{ sort_value }}"{% if sort == 'value' %} class="{{ order|lower }}"{% endif %}>{{ column_value }}</a></th>
+          <th>{{ column_title }}</th>
+          <th>{{ column_unit }}</th>
+          <th class="text-end">{{ column_value }}</th>
           <th class="text-end">{{ column_action }}</th>
         </tr>
       </thead>
