more url changes

--- a/upload/admin/view/template/tool/upload.twig
+++ b/upload/admin/view/template/tool/upload.twig
@@ -26,6 +26,10 @@
                 <input type="text" name="filter_name" value="{{ filter_name }}" placeholder="{{ entry_name }}" id="input-name" class="form-control"/>
               </div>
               <div class="mb-3">
+                <label for="input-code" class="form-label">{{ entry_code }}</label>
+                <input type="text" name="filter_code" value="{{ filter_code }}" placeholder="{{ entry_code }}" id="input-code" class="form-control"/>
+              </div>
+              <div class="mb-3">
                 <label for="input-date-from" class="form-label">{{ entry_date_from }}</label>
                 <input type="date" name="filter_date_from" value="{{ filter_date_from }}" placeholder="{{ entry_date_from }}" id="input-date-from" class="form-control"/>
               </div>
