--- a/upload/admin/view/template/user/user_list.twig
+++ b/upload/admin/view/template/user/user_list.twig
@@ -4,12 +4,12 @@
       <thead>
         <tr>
           <th class="text-center" style="width: 1px;"><input type="checkbox" onclick="$('input[name*=\'selected\']').prop('checked', $(this).prop('checked'));" class="form-check-input"/></th>
-          <th><a href="{{ sort_username }}"{% if sort == 'username' %} class="{{ order|lower }}"{% endif %}>{{ column_username }}</a></th>
-          <th><a href="{{ sort_name }}"{% if sort == 'name' %} class="{{ order|lower }}"{% endif %}>{{ column_name }}</a></th>
-          <th><a href="{{ sort_email }}"{% if sort == 'email' %} class="{{ order|lower }}"{% endif %}>{{ column_email }}</a></th>
-          <th><a href="{{ sort_user_group }}"{% if sort == 'user_group' %} class="{{ order|lower }}"{% endif %}>{{ column_user_group }}</a></th>
-          <th class="text-center"><a href="{{ sort_status }}"{% if sort == 'status' %} class="{{ order|lower }}"{% endif %}>{{ column_status }}</a></th>
-          <th class="d-none d-lg-table-cell"><a href="{{ sort_date_added }}"{% if sort == 'date_added' %} class="{{ order|lower }}"{% endif %}>{{ column_date_added }}</a></th>
+          <th>{{ column_username }}</th>
+          <th>{{ column_name }}</th>
+          <th>{{ column_email }}</th>
+          <th>{{ column_user_group }}</th>
+          <th class="text-center">{{ column_status }}</th>
+          <th class="d-none d-lg-table-cell">{{ column_date_added }}</th>
           <th class="text-end">{{ column_action }}</th>
         </tr>
       </thead>
