--- a/upload/admin/view/template/localisation/location_list.twig
+++ b/upload/admin/view/template/localisation/location_list.twig
@@ -4,8 +4,8 @@
       <thead>
         <tr>
           <th class="text-center" style="width: 1px;"><input type="checkbox" onclick="$('input[name*=\'selected\']').prop('checked', $(this).prop('checked'));" class="form-check-input"/></th>
-          <th><a href="{{ sort_name }}"{% if sort == 'name' %} class="{{ order|lower }}"{% endif %}>{{ column_name }}</a></th>
-          <th><a href="{{ sort_address }}"{% if sort == 'address' %} class="{{ order|lower }}"{% endif %}>{{ column_address }}</a></th>
+          <th>{{ column_name }}</th>
+          <th>{{ column_address }}</th>
           <th class="text-end">{{ column_action }}</th>
         </tr>
       </thead>
