--- a/upload/admin/view/template/marketing/affiliate_list.twig
+++ b/upload/admin/view/template/marketing/affiliate_list.twig
@@ -4,12 +4,12 @@
       <thead>
         <tr>
           <th class="text-center" style="width: 1px;"><input type="checkbox" onclick="$('input[name*=\'selected\']').prop('checked', $(this).prop('checked'));" class="form-check-input"/></th>
-          <th><a href="{{ sort_name }}"{% if sort == 'name' %} class="{{ order|lower }}"{% endif %}>{{ column_name }}</a></th>
-          <th class="d-none d-lg-table-cell"><a href="{{ sort_tracking }}"{% if sort == 'tracking' %} class="{{ order|lower }}"{% endif %}>{{ column_tracking }}</a></th>
-          <th class="text-end"><a href="{{ sort_commission }}"{% if sort == 'commission' %} class="{{ order|lower }}"{% endif %}>{{ column_commission }}</a></th>
-          <th class="text-end"><a href="{{ sort_balance }}"{% if sort == 'balance' %} class="{{ order|lower }}"{% endif %}>{{ column_balance }}</a></th>
-          <th class="text-center"><a href="{{ sort_status }}"{% if sort == 'status' %} class="{{ order|lower }}"{% endif %}>{{ column_status }}</a></th>
-          <th class="d-none d-lg-table-cell"><a href="{{ sort_date_added }}"{% if sort == 'date_added' %} class="{{ order|lower }}"{% endif %}>{{ column_date_added }}</a></th>
+          <th>{{ column_name }}</th>
+          <th class="d-none d-lg-table-cell">{{ column_tracking }}</th>
+          <th class="text-end">{{ column_commission }}</th>
+          <th class="text-end">{{ column_balance }}</th>
+          <th class="text-center">{{ column_status }}</th>
+          <th class="d-none d-lg-table-cell">{{ column_date_added }}</th>
           <th class="text-end">{{ column_action }}</th>
         </tr>
       </thead>
