--- a/upload/admin/view/template/sale/returns_form.twig
+++ b/upload/admin/view/template/sale/returns_form.twig
@@ -126,7 +126,7 @@
           <form id="form-history">
             <legend>{{ text_history_add }}</legend>
             <div class="row mb-3">
-              <label for="input-return-status" class="col-sm-2 col-form-label">{{ entry_status }}</label>
+              <label for="input-return-status" class="col-sm-2 col-form-label">{{ entry_return_status }}</label>
               <div class="col-sm-10">
                 <select name="return_status_id" id="input-return-status" class="form-select">
                   {% for return_status in return_statuses %}
