--- a/upload/admin/view/template/localisation/tax_class_form.twig
+++ b/upload/admin/view/template/localisation/tax_class_form.twig
@@ -36,7 +36,7 @@
             </div>
           </fieldset>
           <fieldset>
-            <legend>{{ text_tax_rate }}</legend>
+            <legend>{{ text_tax_rule }}</legend>
             <table id="tax-rule" class="table table-bordered table-hover">
               <thead>
                 <tr>
