--- a/upload/admin/view/template/marketplace/task.twig
+++ b/upload/admin/view/template/marketplace/task.twig
@@ -40,12 +40,10 @@
           <div class="card-body">
             <form id="form-filter">
               <div class="mb-3">
-                <label for="input-code" class="form-label">{{ entry_code }}</label>
-                <input type="text" name="filter_code" value="{{ filter_code }}" placeholder="{{ entry_code }}" id="input-code" class="form-control"/>
+                <label for="input-code" class="form-label">{{ entry_code }}</label> <input type="text" name="filter_code" value="{{ filter_code }}" placeholder="{{ entry_code }}" id="input-code" class="form-control"/>
               </div>
               <div class="mb-3">
-                <label for="input-status" class="form-label">{{ entry_status }}</label>
-                <select name="filter_status" id="input-status" class="form-select">
+                <label for="input-status" class="form-label">{{ entry_status }}</label> <select name="filter_status" id="input-status" class="form-select">
                   <option value=""></option>
                   {% for status in statuses %}
                     <option value="{{ status.value }}">{{ status.text }}</option>
@@ -63,7 +61,23 @@
       <div class="col col-lg-9 col-md-12">
         <div class="card">
           <div class="card-header"><i class="fa-solid fa-list"></i> {{ text_list }}</div>
-          <div id="list" class="card-body">{{ list }}</div>
+          <div class="card-body">
+            <ul class="nav nav-tabs">
+              <li class="nav-item"><a href="#tab-general" data-bs-toggle="tab" class="nav-link active">{{ tab_general }}</a></li>
+              <li class="nav-item"><a href="#tab-history" data-bs-toggle="tab" class="nav-link">{{ tab_history }}</a></li>
+            </ul>
+            <div class="tab-content">
+              <div class="tab-pane active" id="tab-general">
+                <form id="form-task" action="{{ save }}" method="post" data-oc-toggle="ajax">
+                  <div id="list">{{ list }}</div>
+                </form>
+              </div>
+
+
+            </div>
+
+
+          </div>
         </div>
       </div>
     </div>
