--- a/upload/admin/view/template/marketplace/task_history.twig
+++ b/upload/admin/view/template/marketplace/task_history.twig
@@ -2,24 +2,24 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th>{{ column_date_added }}</th>
+        <th>{{ column_code }}</th>
         <th>{{ column_comment }}</th>
         <th class="text-center">{{ column_status }}</th>
-        <th class="text-center">{{ column_notify }}</th>
+        <th>{{ column_date_added }}</th>
       </tr>
     </thead>
     <tbody>
       {% if histories %}
         {% for history in histories %}
           <tr>
-            <td>{{ history.date_added }}</td>
+            <td>{{ history.code }}</td>
             <td>{{ history.comment }}</td>
-            <td class="text-center">{{ history.order_status }}</td>
-            <td class="text-center">{% if history.notify %}
-                <span class="badge bg-success">{{ text_yes }}</span>
+            <td class="text-center">{% if history.status %}
+                <span class="badge bg-success">{{ text_complete }}</span>
               {% else %}
-                <span class="badge bg-danger">{{ text_no }}</span>
+                <span class="badge bg-danger">{{ text_failed }}</span>
               {% endif %}</td>
+            <td>{{ history.date_added }}</td>
           </tr>
         {% endfor %}
       {% else %}
@@ -31,6 +31,8 @@
   </table>
 </div>
 <div class="row">
-  <div class="col-sm-6 text-start"><x-pagination href="{{ pagination }}" target="#list" page="{{ page }}" limit="{{ limit }}" total="{{ total }}"></x-pagination></div>
+  <div class="col-sm-6 text-start">
+    <x-pagination href="{{ pagination }}" target="#history" page="{{ page }}" limit="{{ limit }}" total="{{ total }}"></x-pagination>
+  </div>
   <div class="col-sm-6 text-end">{{ results }}</div>
 </div>
