--- a/upload/admin/view/template/marketplace/task.twig
+++ b/upload/admin/view/template/marketplace/task.twig
@@ -72,11 +72,10 @@
                   <div id="list">{{ list }}</div>
                 </form>
               </div>
-
-
+              <div class="tab-pane" id="tab-history">
+                <div id="history">{{ history }}</div>
+              </div>
             </div>
-
-
           </div>
         </div>
       </div>
