--- a/upload/admin/view/template/marketplace/task.twig
+++ b/upload/admin/view/template/marketplace/task.twig
@@ -64,7 +64,7 @@
           <div class="card-body">
             <ul class="nav nav-tabs">
               <li class="nav-item"><a href="#tab-general" data-bs-toggle="tab" class="nav-link active">{{ tab_general }}</a></li>
-              <li class="nav-item"><a href="#tab-history" data-bs-toggle="tab" class="nav-link">{{ tab_history }}</a></li>
+              <li class="nav-item"><a href="#tab-log" data-bs-toggle="tab" class="nav-link">{{ tab_log }}</a></li>
             </ul>
             <div class="tab-content">
               <div class="tab-pane active" id="tab-general">
@@ -72,8 +72,8 @@
                   <div id="list">{{ list }}</div>
                 </form>
               </div>
-              <div class="tab-pane" id="tab-history">
-                <div id="history">{{ history }}</div>
+              <div class="tab-pane" id="tab-log">
+                <div id="log">{{ log }}</div>
               </div>
             </div>
           </div>
