--- a/upload/admin/view/template/setting/store_form.twig
+++ b/upload/admin/view/template/setting/store_form.twig
@@ -18,26 +18,26 @@
       <div class="card-header"><i class="fa-solid fa-pencil"></i> {{ text_form }}</div>
       <div class="card-body">
         <form id="form-store" action="{{ save }}" method="post" data-oc-toggle="ajax">
-          <ul class="nav nav-tabs">
-            <li class="nav-item"><a href="#tab-general" data-bs-toggle="tab" class="nav-link active">{{ tab_general }}</a></li>
-            <li class="nav-item"><a href="#tab-local" data-bs-toggle="tab" class="nav-link">{{ tab_local }}</a></li>
-            <li class="nav-item"><a href="#tab-option" data-bs-toggle="tab" class="nav-link">{{ tab_option }}</a></li>
-          </ul>
           <div class="tab-content">
+            <ul class="nav nav-tabs">
+              <li class="nav-item"><a href="#tab-general" data-bs-toggle="tab" class="nav-link active">{{ tab_general }}</a></li>
+              <li class="nav-item"><a href="#tab-local" data-bs-toggle="tab" class="nav-link">{{ tab_local }}</a></li>
+              <li class="nav-item"><a href="#tab-option" data-bs-toggle="tab" class="nav-link">{{ tab_option }}</a></li>
+            </ul>
             <div id="tab-general" class="tab-pane active">
+              <div class="row mb-3">
+                <label for="input-url" class="col-sm-2 col-form-label">{{ entry_url }}</label>
+                <div class="col-sm-10">
+                  <input type="text" name="config_url" value="{{ config_url }}" placeholder="{{ entry_url }}" id="input-url" class="form-control" required/>
+                  <div class="form-text">{{ help_url }}</div>
+                  <div id="error-url" class="invalid-feedback"></div>
+                </div>
+              </div>
               <div class="accordion" id="accordion-general">
                 <div class="accordion-item">
                   <h2 class="accordion-header"><button type="button" class="accordion-button" data-bs-toggle="collapse" data-bs-target="#collapse-general">{{ text_general }}</button></h2>
-                  <div id="collapse-general" class="accordion-collapse show" data-bs-parent="#accordion-general">
+                  <div id="collapse-general" class="accordion-collapse collapse show" data-bs-parent="#accordion-general">
                     <div class="accordion-body">
-                      <div class="row mb-3">
-                        <label for="input-url" class="col-sm-2 col-form-label">{{ entry_url }}</label>
-                        <div class="col-sm-10">
-                          <input type="text" name="config_url" value="{{ config_url }}" placeholder="{{ entry_url }}" id="input-url" class="form-control" required/>
-                          <div class="form-text">{{ help_url }}</div>
-                          <div id="error-url" class="invalid-feedback"></div>
-                        </div>
-                      </div>
                       <ul class="nav nav-tabs">
                         {% for language in languages %}
                           <li class="nav-item"><a href="#language-{{ language.language_id }}" data-bs-toggle="tab" class="nav-link{% if loop.first %} active{% endif %}"><img src="{{ language.image }}" title="{{ language.name }}"/> {{ language.name }}</a></li>
@@ -434,7 +434,7 @@
                           <div id="input-customer-group-display" class="form-control" style="height: 150px; overflow: auto;">
                             {% for customer_group in customer_groups %}
                               <div class="form-check">
-                                <input type="checkbox" name="config_customer_group_display[]" value="{{ customer_group.customer_group_id }}" id="input-customer-group-{{ customer_group.customer_group_id }}" class="form-check-input"{% if customer_group.customer_group_id in config_customer_group_display %} checked{% endif %}/> <label for="input-customer-group-{{ customer_group.customer_group_id }}" class="form-check-label">{{ customer_group.name }}</label>
+                                <input type="checkbox" name="config_customer_group_list[]" value="{{ customer_group.customer_group_id }}" id="input-customer-group-{{ customer_group.customer_group_id }}" class="form-check-input"{% if customer_group.customer_group_id in config_customer_group_list %} checked{% endif %}/> <label for="input-customer-group-{{ customer_group.customer_group_id }}" class="form-check-label">{{ customer_group.name }}</label>
                               </div>
                             {% endfor %}
                           </div>
