--- a/upload/catalog/view/template/account/edit.twig
+++ b/upload/catalog/view/template/account/edit.twig
@@ -33,7 +33,7 @@
             </div>
           </div>
 
-          {% if config_telephone_display %}
+          {% if config_telephone_status %}
             <div class="row mb-3">
               <label for="input-telephone" class="col-sm-2 col-form-label">{{ entry_telephone }}</label>
               <div class="col-sm-10">
