--- a/upload/admin/view/template/setting/setting.twig
+++ b/upload/admin/view/template/setting/setting.twig
@@ -198,7 +198,8 @@
                             <div class="form-control" style="height: 150px; overflow: auto;">
                               {% for location in locations %}
                                 <div class="form-check">
-                                  <input type="checkbox" name="config_location[]" value="{{ location.location_id }}" id="input-location-{{ location.location_id }}" class="form-check-input"{% if location.location_id in config_location %} checked{% endif %}/> <label for="input-location-{{ location.location_id }}" class="form-check-label">{{ location.name }}</label>
+                                  <input type="checkbox" name="config_location[]" value="{{ location.location_id }}" id="input-location-{{ location.location_id }}" class="form-check-input"{% if location.location_id in config_location %} checked{% endif %}/>
+                                  <label for="input-location-{{ location.location_id }}" class="form-check-label">{{ location.name }}</label>
                                 </div>
                               {% endfor %}
                             </div>
@@ -227,9 +228,13 @@
                   <label class="col-sm-2 col-form-label">{{ entry_country_list }}</label>
                   <div class="col-sm-10">
                     <div id="input-country-list" class="form-control" style="height: 150px; overflow: auto;">
+                      <div class="form-check">
+                        <input type="checkbox" id="input-country-all" onclick="$('input[name*=\'config_country_list\']').prop('checked', $(this).prop('checked'));" class="form-check-input"/>
+                        <label for="input-country-all" class="form-check-label">{{ text_all }}</label>
+                      </div>
                       {% for country in countries %}
                         <div class="form-check">
-                          <input type="checkbox" name="config_country_list[]" value="{{ country.country_id }}" id="input-country-{{ country.customer_group_id }}" class="form-check-input"{% if country.country_id in config_country_list %} checked{% endif %}/>
+                          <input type="checkbox" name="config_country_list[]" value="{{ country.country_id }}" id="input-country-{{ country.country_id }}" class="form-check-input"{% if country.country_id in config_country_list %} checked{% endif %}/>
                           <label for="input-country-{{ country.country_id }}" class="form-check-label">{{ country.name }}</label>
                         </div>
                       {% endfor %}
@@ -269,6 +274,25 @@
                   </div>
                 </div>
                 <div class="row mb-3">
+                  <label class="col-sm-2 col-form-label">{{ entry_language_list }}</label>
+                  <div class="col-sm-10">
+                    <div id="input-language-list" class="form-control" style="height: 150px; overflow: auto;">
+                      <div class="form-check">
+                        <input type="checkbox" id="input-language-all" onclick="$('input[name*=\'config_language_list\']').prop('checked', $(this).prop('checked'));" class="form-check-input"/>
+                        <label for="input-language-all" class="form-check-label">{{ text_all }}</label>
+                      </div>
+                      {% for language in languages %}
+                        <div class="form-check">
+                          <input type="checkbox" name="config_language_list[]" value="{{ language.code }}" id="input-language-{{ language.language_id }}" class="form-check-input"{% if language.code in config_language_list %} checked{% endif %}/>
+                          <label for="input-language-{{ language.language_id }}" class="form-check-label">{{ language.name }}</label>
+                        </div>
+                      {% endfor %}
+                    </div>
+                    <div class="form-text">{{ help_language_list }}</div>
+                    <div id="error-language-list" class="invalid-feedback"></div>
+                  </div>
+                </div>
+                <div class="row mb-3">
                   <label for="input-language-admin" class="col-sm-2 col-form-label">{{ entry_language_admin }}</label>
                   <div class="col-sm-10">
                     <select name="config_language_admin" id="input-language-admin" class="form-select">
@@ -290,6 +314,25 @@
                       {% endfor %}
                     </select>
                     <div class="form-text">{{ help_currency }}</div>
+                  </div>
+                </div>
+                <div class="row mb-3">
+                  <label class="col-sm-2 col-form-label">{{ entry_currency_list }}</label>
+                  <div class="col-sm-10">
+                    <div id="input-currency-list" class="form-control" style="height: 150px; overflow: auto;">
+                      <div class="form-check">
+                        <input type="checkbox" id="input-currency-all" onclick="$('input[name*=\'config_currency_list\']').prop('checked', $(this).prop('checked'));" class="form-check-input"/>
+                        <label for="input-currency-all" class="form-check-label">{{ text_all }}</label>
+                      </div>
+                      {% for currency in currencies %}
+                        <div class="form-check">
+                          <input type="checkbox" name="config_currency_list[]" value="{{ currency.code }}" id="input-currency-{{ currency.currency_id }}" class="form-check-input"{% if currency.code in config_currency_list %} checked{% endif %}/>
+                          <label for="input-currency-{{ currency.currency_id }}" class="form-check-label">{{ currency.title }}</label>
+                        </div>
+                      {% endfor %}
+                    </div>
+                    <div class="form-text">{{ help_currency_list }}</div>
+                    <div id="error-currency-list" class="invalid-feedback"></div>
                   </div>
                 </div>
                 <div class="row mb-3">
