--- a/upload/extension/opencart/admin/view/template/module/bestseller.twig
+++ b/upload/extension/opencart/admin/view/template/module/bestseller.twig
@@ -3,9 +3,9 @@
   <div class="page-header">
     <div class="container-fluid">
       <div class="float-end">
-        <button type="button" id="button-sync" data-bs-toggle="tooltip" title="{{ button_sync }}" class="btn btn-warning"><i class="fa-solid fa-rotate"></i></button>
-        <button type="submit" form="form-module" data-bs-toggle="tooltip" title="{{ button_save }}" class="btn btn-primary"><i class="fa-solid fa-save"></i></button>
-        <a href="{{ back }}" data-bs-toggle="tooltip" title="{{ button_back }}" class="btn btn-light"><i class="fa-solid fa-reply"></i></a></div>
+        <button type="button" id="button-sync" title="{{ button_sync }}" class="btn btn-warning"><i class="fa-solid fa-rotate"></i></button>
+        <button type="submit" form="form-module" title="{{ button_save }}" class="btn btn-primary"><i class="fa-solid fa-save"></i></button>
+        <a href="{{ back }}" title="{{ button_back }}" class="btn btn-light"><i class="fa-solid fa-reply"></i></a></div>
       <h1>{{ heading_title }}</h1>
       <ol class="breadcrumb">
         {% for breadcrumb in breadcrumbs %}
