--- a/upload/extension/opencart/admin/view/template/report/sale_coupon.twig
+++ b/upload/extension/opencart/admin/view/template/report/sale_coupon.twig
@@ -14,7 +14,7 @@
           </div>
           <div class="text-end">
             <button type="button" id="button-filter" class="btn btn-light"><i class="fa-solid fa-filter"></i> {{ button_filter }}</button>
-            <button type="reset" data-bs-toggle="tooltip" title="{{ button_reset }}" class="btn btn-outline-secondary"><i class="fa-solid fa-filter-circle-xmark"></i></button>
+            <button type="reset" title="{{ button_reset }}" class="btn btn-outline-secondary"><i class="fa-solid fa-filter-circle-xmark"></i></button>
           </div>
         </form>
       </div>
